--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   },
   "private": true,
   "dependencies": {
+    "@angular/animations": "^9.1.12",
+    "@angular/cdk": "^9.2.4",
     "@angular/common": "~9.1.6",
     "@angular/core": "~9.1.6",
     "@angular/forms": "~9.1.6",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "~9.1.6",
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
@@ -33,7 +36,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.5",
-    "@angular/cli": "~9.1.5",
+    "@angular/cli": "^9.1.12",
     "@angular/compiler": "~9.1.6",
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
