--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "@fortawesome/fontawesome-free": "^5.14.0",
     "@ionic-native/core": "^5.0.7",
     "@ionic-native/header-color": "^5.27.0",
+    "@ionic-native/keyboard": "^5.28.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
     "@ionic/angular": "^5.3.1",
-    "cordova-android": "9.0.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -41,7 +41,7 @@
     "@angular/compiler-cli": "~9.1.6",
     "@angular/language-service": "~9.1.6",
     "@capacitor/cli": "2.4.0",
-    "@ionic/angular-toolkit": "^2.1.1",
+    "@ionic/angular-toolkit": "^2.3.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
